Add logging to tsan_interface

--- a/compiler-rt/lib/tsan/rtl/CMakeLists.txt
+++ b/compiler-rt/lib/tsan/rtl/CMakeLists.txt
@@ -48,6 +48,7 @@ set(TSAN_SOURCES
   tsan_symbolize.cpp
   tsan_sync.cpp
   tsan_vector_clock.cpp
+  log.cpp
   )
 
 set(TSAN_CXX_SOURCES
@@ -105,6 +106,7 @@ set(TSAN_HEADERS
   tsan_sync.h
   tsan_trace.h
   tsan_vector_clock.h
+  log.h
   )
 
 set(TSAN_RUNTIME_LIBRARIES)
